# Proyecto-Final-Grupo-11-Backend

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCOMMODATION_SEARCH_API.md  CLAUDE.md  CODE_COVERAGE_SPRINT1.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  INFRA_GUIDE.md  INSTALL_MAKE.md  Makefile  QUICKSTART_SEARCH.md  README.md  deploy-aws.ps1  deploy.sh  docker-compose.yml  setup-https.sh  terraform-outputs.txt  tls.crt
.github/scripts/: detect-changes.sh  health-check.sh
.github/workflows/: build-push.yml  ci.yml  deploy-eks.yml  release.yml  terraform.yml
docs/: HOTEL_SEARCH_API.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
kubernetes/: alb-controller-deployment.yaml  alb-controller-rbac.yaml  alb-controller-serviceaccount.yaml  ingress.yaml  shared-config.yaml
kubernetes/deployments/: auth-service.yaml  booking-service.yaml  booking-worker.yaml  cart-service.yaml  commercial-service.yaml  health-copilot.yaml  inventory-service.yaml  notification-service.yaml  payment-service.yaml  reports-service.yaml  search-service.yaml  search-worker.yaml
scripts/: build-all.sh  bump-version.sh  pre-push-tests.sh  push-to-ecr.sh  setup-dev.sh  setup-k8s.sh
scripts/localstack/: init-sqs.sh
services/auth_service/: Dockerfile  README.md  pyproject.toml
services/auth_service/app/: main.py
services/auth_service/app/routers/: auth.py
services/auth_service/tests/: test_auth.py  test_main.py
services/booking_service/: ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/booking_service/alembic/versions/: 001_create_bookings_table.py  002_add_payment_id.py
services/booking_service/app/: config.py  exceptions.py  main.py  models.py  redis_lock.py  schemas.py
services/booking_service/app/routers/: bookings.py  hotel_bookings.py
services/booking_service/app/services/: booking_service.py  inventory_client.py  sns_publisher.py  sqs_consumer.py
services/booking_service/tests/: conftest.py  test_booking_creation.py  test_edge_cases.py  test_hotel_bookings.py  test_hu33_detail.py  test_inventory_client.py  test_main.py  test_qr_endpoint.py  test_redis_lock.py  test_routers.py  test_schemas.py
services/booking_service/workers/: sqs_worker.py
services/cart_service/: README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/commercial_service/: README.md  pyproject.toml
services/gateway_service/: README.md  pyproject.toml
services/health_copilot/: README.md  (+1 more)
services/inventory_service/: .flake8  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/inventory_service/alembic/: env.py
services/inventory_service/alembic/versions/: 001_create_inventory_tables.py  002_add_admin_id_to_hotels.py  003_change_admin_id_to_varchar.py
services/inventory_service/app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
services/inventory_service/app/models/: __init__.py  accommodation.py
services/inventory_service/app/routers/: holds.py  hotels.py  rooms.py  tariffs.py
services/inventory_service/app/routes/: __init__.py  accommodations.py  webhooks.py
services/inventory_service/app/schemas/: __init__.py  hotel.py
services/inventory_service/app/services/: __init__.py  accommodation_service.py  availability_service.py  hold_service.py  sns_publisher.py  sqs_publisher.py
services/inventory_service/app/tasks/: cleanup.py
services/inventory_service/scripts/: seed.py
services/inventory_service/tests/: conftest.py  test_availability.py  test_cleanup.py  test_edge_cases.py  test_holds.py  test_main.py  test_reserve_release.py  test_routers.py  test_schemas.py  test_webhooks.py
services/search_service/: .flake8  Dockerfile  README.md  pyproject.toml
services/search_service/app/: config.py  main.py  redis_client.py
services/search_service/app/routes/: __init__.py  accommodations.py  search.py
services/search_service/app/services/: __init__.py  redis_indexer.py  search_service.py  sqs_consumer.py
services/search_service/tests/: conftest.py  test_main.py  test_search.py
services/search_service/workers/: sqs_worker.py
(+107 files in other folders)
